syntax = "proto3";

option go_package = "../pb;pb";

// protoc --gofast_out=. .\model.proto

message ManifestChangeSet{
  repeated ManifestChange changes = 1;
}

message ManifestChange{
  uint64 Id = 1;
  enum ChangeType{
    Create = 0;
    Delete = 1;
  }
  ChangeType Type = 2;
  uint32 LevelId = 3; // Only used for CREATE
  bytes CheckSum = 4;// Only used for CREATE
}

message tableIndex{
  repeated blockOffset offsets = 1;
  bytes bloomFilter = 2;
  uint64 maxVersion = 3;
  uint32 keyCount = 4;
  uint32 staleDataSize = 5;
}

message blockOffset{
  bytes key = 1;
  uint64 offset = 2;
  uint32 size = 3;
}